--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/pure-min.css" integrity="sha384-" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.3/build/grids-responsive-min.css" />
 		<script src="https://d3js.org/d3.v5.min.js"></script>
-		<title>Sprial Plot</title>
+		<title>Prime Spiral</title>
 		<style>
 			body{
 				/* text-align: center; */
